--- a/.env
+++ b/.env
@@ -18,6 +18,10 @@ MONGODB_DB=reptile
 # Kafka配置
 KAFKA_BOOTSTRAP_SERVERS=38.148.249.96:9092
 KAFKA_TOPIC_PREFIX=fastapi_reptile_
+KAFKA_NUM_PARTITIONS=3
+KAFKA_REPLICATION_FACTOR=1
+KAFKA_CONNECT_RETRIES=3
+KAFKA_CONNECT_DELAY=5
 
 # ZooKeeper配置
 ZOOKEEPER_HOSTS=38.148.249.96:2181
