--- a/.env
+++ b/.env
@@ -1,3 +1,17 @@
+# App配置
+DEBUG=True
+
+# 日志配置
+LOG_LEVEL=INFO
+LOG_FILE=app.log
+LOG_FILE_SIZE=104857600
+LOG_FILE_MAX_BYTES=104857600
+LOG_FILE_BACKUP=5
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
+LOG_FILE_ENCODING=utf-8
+LOG_FILE_MODE=a
+
 # MySQL配置
 MYSQL_HOST=38.148.249.96
 MYSQL_PORT=3306
