--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ bcrypt==4.0.1
 python-dotenv==1.0.0
 email-validator==2.3.0
 pydantic~=2.11.7
+starlette~=0.27.0
+pydantic-settings~=2.10.1
+aiohttp~=3.12.15
+beautifulsoup4~=4.13.5
